--- a/source/sass/components/presentation.scss
+++ b/source/sass/components/presentation.scss
@@ -45,6 +45,7 @@
 
 .presentation__text {
   margin-block: 0 40px;
+  padding-inline: 8px;
   color: var(--black-100);
   text-transform: uppercase;
   text-align: center;
@@ -53,6 +54,7 @@
     max-width: 500px;
     margin-block-end: 90px;
     margin-inline: auto;
+    padding-inline: 20px;
   }
 }
 
